[package]
name = "azusa"
version = "1.0.1"
authors = ["fz6m"]
description = "String index transformer for Rust utf8 to JavaScript utf16."
homepage = "https://github.com/xn-sakina/azusa"
repository = "https://github.com/xn-sakina/azusa"
readme = "README.md"
keywords = ["string", "string-index", "javascript", "utf8-to-utf16"]
license = "MIT"
edition = "2021"
rust-version = "1.63"
categories = ["javascript"]

[lib]
name = "azusa"

[dependencies]
unicode-width = "0.1.11"

[dev-dependencies]
aho-corasick = "1.1.2"
